--- a/Swyft.Helpers/Swyft.Helpers.csproj
+++ b/Swyft.Helpers/Swyft.Helpers.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Figgle" Version="0.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Swyft.Core\Swyft.Core.csproj" />
   </ItemGroup>
 
