--- a/Swyft.UI/Swyft.UI.csproj
+++ b/Swyft.UI/Swyft.UI.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Swyft.Core\Swyft.Core.csproj" />
     <ProjectReference Include="..\Swyft.Helpers\Swyft.Helpers.csproj" />
   </ItemGroup>
