--- a/SwyftBank/SwyftBank.csproj
+++ b/SwyftBank/SwyftBank.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Swyft.UI\Swyft.UI.csproj" />
   </ItemGroup>
 
