Implement password hashing and email uniqueness

--- a/Swyft.Helpers/Swyft.Helpers.csproj
+++ b/Swyft.Helpers/Swyft.Helpers.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Figgle" Version="0.4.0" />
   </ItemGroup>
 
