--- a/Swyft.Core/Swyft.Core.csproj
+++ b/Swyft.Core/Swyft.Core.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Swyft.Utility\Swyft.Utility.csproj" />
   </ItemGroup>
 
