--- a/Swyft.Helpers/Swyft.Helpers.csproj
+++ b/Swyft.Helpers/Swyft.Helpers.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Figgle" Version="0.4.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
