--- a/Swyft.Helpers/Swyft.Helpers.csproj
+++ b/Swyft.Helpers/Swyft.Helpers.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Swyft.Core\Swyft.Core.csproj" />
+    <ProjectReference Include="..\Swyft.Models\Swyft.Models.csproj" />
   </ItemGroup>
 
 </Project>
