--- a/Swyft.Tests/Swyft.Tests.csproj
+++ b/Swyft.Tests/Swyft.Tests.csproj
@@ -1,13 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extras.Moq" Version="6.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="Moq" Version="4.18.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -17,6 +19,14 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Swyft.Core\Swyft.Core.csproj" />
+    <ProjectReference Include="..\Swyft.Data\Swyft.Data.csproj" />
+    <ProjectReference Include="..\Swyft.Helpers\Swyft.Helpers.csproj" />
+    <ProjectReference Include="..\Swyft.Models\Swyft.Models.csproj" />
+    <ProjectReference Include="..\Swyft.Utility\Swyft.Utility.csproj" />
   </ItemGroup>
 
 </Project>
